; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_frags.c_frag_variant.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_frags.c_frag_variant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32, i8*, i32, i32, %struct.TYPE_5__, i32, i32*, i32, i32 }
%struct.TYPE_5__ = type { i64, i64, i64 }

@frchain_now = common dso_local global %struct.TYPE_6__* null, align 8
@frag_now = common dso_local global %struct.TYPE_7__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @frag_variant(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  store i8* %6, i8** %14, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** @frchain_now, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = call i8* @obstack_next_free(i32* %17)
  store i8* %18, i8** %15, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 8
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 7
  store i32 %25, i32* %27, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 6
  store i32* %28, i32** %30, align 8
  %31 = load i32, i32* %13, align 4
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 5
  store i32 %31, i32* %33, align 8
  %34 = load i8*, i8** %14, align 8
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 1
  store i8* %34, i8** %36, align 8
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 3
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** @frag_now, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 2
  %41 = call i32 @as_where(i32* %38, i32* %40)
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @frag_new(i32 %42)
  %44 = load i8*, i8** %15, align 8
  ret i8* %44
}

declare dso_local i8* @obstack_next_free(i32*) #1

declare dso_local i32 @as_where(i32*, i32*) #1

declare dso_local i32 @frag_new(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
